--- a/app/views/student_life/typical_day.haml
+++ b/app/views/student_life/typical_day.haml
@@ -10,67 +10,67 @@
                         %th Activity
                     %tbody
                         %tr
-                            %td 7:10 – 7:40
-                            %td 30 minutes
+                            %td 7:10 – 7:35
+                            %td 25 minutes
                             %td Arrival/Breakfast
                         %tr
-                            %td 7:40 – 7:55
-                            %td 15 minutes
-                            %td Morning Meeting – A joyful celebration and preparation for learning
+                            %td 7:35 – 7:40
+                            %td 5 minutes
+                            %td Whole School Morning Chant
                         %tr
-                            %td 7:55 – 8:10
-                            %td 15 minutes
+                            %td 7:40 – 8:05
+                            %td 25 minutes
                             %td Read Aloud
                         %tr
-                            %td 8:10 – 8:30
+                            %td 8:05 – 8:45
+                            %td 30 minutes
+                            %td Phonics
+                        %tr
+                            %td 8:45 – 9:25
+                            %td 40 minutes
+                            %td Reading Block 1/Tutors
+                        %tr
+                            %td 9:25 – 10:05
+                            %td 40 minutes
+                            %td Reading Block 2/Tutors
+                        %tr
+                            %td 10:05 – 10:30
+                            %td 25 minutes
+                            %td Phonics
+                        %tr
+                            %td 10:30 – 11:10
+                            %td 40 minutes
+                            %td Reading Comprehension/Fitness
+                        %tr
+                            %td 11:10 – 11:30
                             %td 20 minutes
-                            %td Reading Workshop
+                            %td Core
                         %tr
-                            %td 8:30 – 9:15
-                            %td 45 minutes
-                            %td Reading Block I (Small Group Activities and Instruction/5 Students)
+                            %td 11:30 - 12:10
+                            %td 40 minutes
+                            %td Lunch/Recess
                         %tr
-                            %td 9:15 – 10:00
-                            %td 45 minutes
-                            %td Tutoring (Small Group Activities and Instruction/5 Students)
+                            %td 12:10 - 12:30
+                            %td 20 minutes
+                            %td Math Meeting
                         %tr
-                            %td 10:00 – 10:10
-                            %td 15 minutes
-                            %td Snack/Recess
+                            %td 12:30 – 12:50
+                            %td 20 minutes
+                            %td Math Block 1
                         %tr
-                            %td 10:10 – 10:40
-                            %td 30 minutes
-                            %td Reading Block II (Smaller Group Instruction)
+                            %td 12:50 – 1:10
+                            %td 20 minutes
+                            %td Math Block 2
                         %tr
-                            %td 10:40 – 11:10
-                            %td 30 minutes
-                            %td Reading Computer Program
+                            %td 1:10 – 1:30
+                            %td 20 minutes
+                            %td Math Block 3
                         %tr
-                            %td 11:10 - 1:10
-                            %td 40 minutes x 3
-                            %td Science/Social Studies, Lunch, Specials (Music/Art/Fitness/Spanish)
-                        %tr
-                            %td 1:10 – 1:40
-                            %td 30 minutes
-                            %td Math Meeting/Story Problems
-                        %tr
-                            %td 1:40 – 2:10
-                            %td 30 minutes
-                            %td Small Group Math Lessons
-                        %tr
-                            %td 2:10 – 2:40
-                            %td 30 minutes
-                            %td Math Computer Program
-                        %tr
-                            %td 2:40 – 3:20
+                            %td 1:30 – 2:10
                             %td 40 minutes
                             %td Writing
                         %tr
-                            %td 3:20 – 3:40
-                            %td 20 minutes
-                            %td Choice Time
-                        %tr
-                            %td 3:45
+                            %td 2:10
                             %td
                             %td Dismissal
                 %img{:src => asset_path('student_life/typical_day.jpg')}
