--- a/app/views/contact/apply_to_tutor.haml
+++ b/app/views/contact/apply_to_tutor.haml
@@ -1,19 +1,67 @@
 .container
     .row
-        .span5.panel#panel-left
+        .span4.panel#panel-left
             .content
                 %img{:src => asset_path('contact/tutor.jpg')}
-        .span7.panel#panel-right
+        .span8.panel#panel-right
             .content
                 %h2 Apply to Tutor
-                %p.lead
-                    All of the tutors at Prodeo Academy are trained and work collaboratively with specific teachers to support learning.
-                    %br
-                    %br
-                    If you are interested in becoming a tutor at Prodeo Academy, we invite you to contact Chancey Anderson, Principal.
-                    %br
-                    %br
-                    %p
-                        %b Chancy Anderson, Principal
-                    %p.text-info chanceyanderson@prodeoacademy.org
-                    %p.text-info (347) 982-5061
+                %p.lead Thank you for your interest in becoming a tutor at Prodeo Academy!
+
+                %p Our scholars have grown an average of 1.5 years in both Reading and Math each year, in part because of help from our tutors.
+
+                %h4 Who
+                %ul
+                    %li People interested in helping children change their lives
+                    %li People who need volunteer hours and want to have an impact
+                    %li People who are interested in making a contribution to society
+
+                %h4 What
+                %ul
+                    %li Tutor Kindergarten, First, and Second Grade Scholars in Math and Reading
+
+                %h4 Where
+                %ul
+                    %li
+                        Prodeo Academy
+                        %br
+                        1555 40th Ave NE
+                        %br
+                        Minneapolis 55421
+
+                %h4 When
+                %ul
+                    %li 8:45 a.m. – 10:45 a.m. Monday through Thursday
+                    %li Cover a tutoring session one day per week or “job-share” a tutoring slot with friends, coworkers, and/or family and come once or twice each month
+
+                %p All tutors receive orientation and training, as well as ongoing support. For more information please contact Chancey Anderson, Principal.
+                %p
+                    %b Chancey Anderson, Principal
+                %p
+                    %a{:href => "mailto:chanceyanderson@prodeoacademy.org"} chanceyanderson@prodeoacademy.org
+                %p
+                    %a{:href => "tel:3479825061"} (347) 982-5061
+
+                %h4 Our Tutors
+
+                %p Tutors from the following organizations currently volunteer as individuals or in teams at Prodeo Academy:
+                %ul
+                    %li Apex Systems
+                    %li Bassford Remele
+                    %li First Lutheran Church
+                    %li General Mills
+                    %li Junior League
+                    %li M. A. Mortenson Company
+                    %li Medtronic
+                    %li Page Scholars
+                    %li Piper Jaffray
+                    %li PriceWaterhouse Cooper
+                    %li Prodeo Academy Parents
+                    %li Ryan Companies
+                    %li St Joseph’s Parish Community of New Hope
+                    %li Stinson Leonard Street
+                    %li Thrivent Financial
+                    %li Ulteig
+                    %li University of Minnesota Interns
+                    %li University of St. Thomas Interns
+                    %li University of St. Thomas Men's Basketball
