--- a/app/views/contact/volunteer.haml
+++ b/app/views/contact/volunteer.haml
@@ -17,8 +17,10 @@
                     %li Riding the bus home with our students for 30-45 minutes at 4:00 PM one to five days per week.
                     %li Providing Administrative Assistance support on a flexible schedule throughout the week.
                 %p If you have time and talent to share, please contact Rick Campion, Executive Director.
+                %br
                 %p
                     %b Rick Campion, Executive Director
-                %p.text-info
+                %p
                     %a{:href => "mailto:rickcampion@prodeoacademy.org"} rickcampion@prodeoacademy.org
-                %p.text-info (612) 559-4881
+                %p
+                    %a{:href => "tel:6125594881"} (612) 559-4881
