Update staff page

--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -43,7 +43,6 @@
                             = render :partial => "person", :locals => {:name => "Melissa Lindquist", :role => "ELL Teacher", :email => true}
                             = render :partial => "person", :locals => {:name => "Mandy Lindstrom", :role => "Learning Support Teacher", :email => true}
                         %ul.thumbnails
-                            = render :partial => "person", :locals => {:name => "Tiffany Graham", :role => "Educational Assistant", :email => true}
                             = render :partial => "person", :locals => {:name => "Shanequa Cook", :role => "Educational Assistant", :email => true}
                 %h3 Staff
                 .row-fluid
@@ -51,3 +50,4 @@
                         %ul.thumbnails
                             = render :partial => "person", :locals => {:name => "Angela Shepherd", :role => "Social Worker", :email => true}
                             = render :partial => "person", :locals => {:name => "Adi Perez", :role => "Office Administration", :email => true}
+                            = render :partial => "person", :locals => {:name => "Kelly Mulvehill", :role => "External Relations / Mindfulness and Yoga", :email => true}
