Update stay in touch

--- a/app/views/application/index.haml
+++ b/app/views/application/index.haml
@@ -60,14 +60,13 @@
         %p.lead If you’re interested in learning more about our inspiring community, feel free to contact us.
         %br
         %p
-            %b Rick Campion, Executive Director
-            %p.text-info rickcampion@prodeoacademy.org
-            %p.text-info (612) 559-4881
-        %br
-        %p
-            %b Chancey Anderson, Principal
-            %p.text-info chanceyanderson@prodeoacademy.org
-            %p.text-info (347) 982-5061
+            %p
+                %b Jermain Davis
+            %p
+                %a{:href => "mailto:jermaindavis@prodeoacademy.org"} jermaindavis@prodeoacademy.org
+            %p
+                %a{:href => "tel:6518155843"} (651) 815-5843
+
 #youtube.modal.hide.fade
     .modal-header
         %button.close#stop-video{:type => "button", :data => {:dismiss => "modal"}} x
