--- a/app/views/contact/apply_to_teach.haml
+++ b/app/views/contact/apply_to_teach.haml
@@ -6,13 +6,29 @@
         .span8.panel#panel-right
             .content
                 %h2 Apply to Teach
-                %p.lead
-                    If you are a qualified teacher who would like to join our inspiring, engaged and results-driven community, we invite you to contact Chancey Anderson, Principal.
+                %p.lead Thank you for your interest in becoming a teacher at Prodeo Academy!
+                %p We are currently hiring for the following roles:
+                %ul
+                    %li 1 Fitness Teacher
+                    %li 1 Specialist Teacher (Art, Music, or Dance)
+                    %li 1 Recess Attendant, Tutor, and Reading Corps
+                    %li 16 Classroom Teachers (Kindergarten – 3rd Grade)
                 %br
+
+                %p If you are interested in applying, please fill out our application.
+                %ul
+                    %li
+                        %a{:href => asset_path("prodeo-academy-application.docx"), :target => :blank} Prodeo Academy Application.docx
+                        (Microsoft Word)
+                    %li
+                        %a{:href => asset_path("prodeo-academy-application.pdf"), :target => :blank} Prodeo Academy Application.pdf
+                        (PDF)
                 %br
+
+                %p Please direct questions and completed applications to Jermain Davis.
                 %p
-                    %b Chancey Anderson, Principal
+                    %b Jermain Davis
                 %p
-                    %a{:href => "mailto:chanceyanderson@prodeoacademy.org"} chanceyanderson@prodeoacademy.org
+                    %a{:href => "mailto:jermaindavis@prodeoacademy.org"} jermaindavis@prodeoacademy.org
                 %p
-                    %a{:href => "tel:3479825061"} (347) 982-5061
+                    %a{:href => "tel:6518155843"} (651) 815-5843
