Update authorizer info

--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -51,9 +51,19 @@
                         %p
                             %small Minnesota law requires that all chartered schools be authorized by an organization approved by the commissioner of education to be an authorizer.
                         %p
-                            %small Prodeo Academy's authorizer is Innovative Quality Schools (IQS) which was approved as an authorizer on December 1, 2010.
+                            %small Prodeo Academy's authorizer is Innovative Quality Schools (IQS) which was approved as an authorizer on December 1, 2010. Contact IQS:
                         %p
                             %small
-                                Persons interested in learning more about IQS and their oversight of Prodeo Academy may go to:
-                                %a{:href => "http://www.iqsmn.org/"} http://www.iqsmn.org
-                                or contact Robert Wedl, Managing Partner: bob@iqsmn.org or 612-501-9606
+                                Milo Cutter
+                                %br
+                                Innovative Quality Schools, (IQS)
+                                %br
+                                P.O. Box 40219
+                                %br
+                                St. Paul, MN 55104
+                                %br
+                                http://www.iqsmn.org
+                                %br
+                                651-234-0900
+                                %br
+                                mcutter@iqsmn.org
