Update board text

--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -42,7 +42,7 @@
                             All meetings are held at Prodeo Academy at
                             %i 1555 40th Ave NE, Mpls, MN 55421.
                         %p
-                            The upcoming agenda, all board minutes, and our Authorizer's Annual Report can be viewed on
+                            The upcoming agenda, all board minutes, our Authorizer's Annual Report, board member contact information, and our financial statements can be viewed on
                             = succeed '.' do
                                 %a{:href => "https://drive.google.com/folderview?id=0B9F_q1nOg-J-ZDdzQVF3WWRRQU0&usp=sharing#list", :target => "_blank"} Google Drive
                 .row-fluid
