--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -7,15 +7,15 @@
                 .row-fluid
                     .span12
                         %ul.thumbnails.board
-                            = render :partial => "person", :locals => {:name => "Doug Jaeger", :role => "Board Chair, Former CEO of Adolfson & Peterson", :email => true}
-                            = render :partial => "person", :locals => {:name => "Vidal Guzman", :role => "Senior Manager at Public Radio International", :email => true}
-                            = render :partial => "person", :locals => {:name => "Mark Chronister", :role => "Board Treasurer, Partner at Templeton Laird", :email => true}
-                            = render :partial => "person", :locals => {:name => "Maggie Skrypek", :role => "Board Secretary", :email => true}
-                        %ul.thumbnails.board
                             = render :partial => "person", :locals => {:name => "Rick Campion", :role => "Co-Founder, Executive Director, Prodeo Academy - Ex-Officio", :email => true}
-                            = render :partial => "person", :locals => {:name => "Jeff Klinefelter", :role => "Managing Director, Head of Global Equities at Piper Jaffray", :email => true}
+                            = render :partial => "person", :locals => {:name => "Mark Chronister", :role => "Board Chair, Partner at Templeton Laird", :email => true}
+                            = render :partial => "person", :locals => {:name => "Vidal Guzman", :role => "Senior Manager at Public Radio International", :email => true}
                             = render :partial => "person", :locals => {:name => "Skye Hoekstra", :role => "Teacher, Prodeo Academy", :email => true}
+                        %ul.thumbnails.board
+                            = render :partial => "person", :locals => {:name => "Doug Jaeger", :role => "Vice Chair, CEO Ulteig", :email => true}
+                            = render :partial => "person", :locals => {:name => "Jeff Klinefelter", :role => "Board Treasurer, Managing Director, Head of Global Equities at Piper Jaffray", :email => true}
                             = render :partial => "person", :locals => {:name => "Lewis Remele", :role => ""}
+                            = render :partial => "person", :locals => {:name => "Maggie Skrypek", :role => "Board Secretary", :email => true}
                 %h2 Community Engagment Committe
                 .row-fluid
                     .span12
