--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -14,7 +14,7 @@
                         %ul.thumbnails.board
                             = render :partial => "person", :locals => {:name => "Doug Jaeger", :role => "Vice Chair, CEO Ulteig", :email => true}
                             = render :partial => "person", :locals => {:name => "Jeff Klinefelter", :role => "Board Treasurer, Managing Director, Head of Global Equities at Piper Jaffray", :email => true}
-                            = render :partial => "person", :locals => {:name => "Lewis Remele", :role => ""}
+                            = render :partial => "person", :locals => {:name => "Lewis Remele", :role => "Shareholder, Bassford Remele", :email => true}
                             = render :partial => "person", :locals => {:name => "Maggie Skrypek", :role => "Board Secretary", :email => true}
                 %h2 Community Engagment Committe
                 .row-fluid
