Staff page updates

--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -39,15 +39,23 @@
                             = render :partial => "person", :locals => {:name => "Skye Hoekstra", :role => "Second Grade Teacher / Team Chair", :email => true}
                         %ul.thumbnails
                             = render :partial => "person", :locals => {:name => "Ashley Denaway", :role => "Second Grade Teacher", :email => true}
-                            = render :partial => "person", :locals => {:name => "Brittany Gorr", :role => "Second Grade Teacher", :email => true}
                             = render :partial => "person", :locals => {:name => "Melissa Lindquist", :role => "ELL Teacher", :email => true}
                             = render :partial => "person", :locals => {:name => "Mandy Lindstrom", :role => "Learning Support Teacher", :email => true}
-                        %ul.thumbnails
                             = render :partial => "person", :locals => {:name => "Shanequa Cook", :role => "Educational Assistant", :email => true}
+                        %ul.thumbnails
+                            = render :partial => "person", :locals => {:name => "Aaron Ziman", :role => "Educational Assistant", :email => true}
+                            = render :partial => "person", :locals => {:name => "Evelin Cardenas", :role => "Educational Assistant / Co-Teacher", :email => true}
+                            = render :partial => "person", :locals => {:name => "Emily Hoeppner", :role => "Educational Assistant", :email => true}
+                            = render :partial => "person", :locals => {:name => "Laquita Davis", :role => "Educational Assistant", :email => true}
+                        %ul.thumbnails
+                            = render :partial => "person", :locals => {:name => "Jeff Stensrud", :role => "Fitness Teacher", :email => true}
+                            = render :partial => "person", :locals => {:name => "Andy Pokel", :role => "Educational Assistant / Music Teacher", :email => true}
+                            = render :partial => "person", :locals => {:name => "Ann Bexell", :role => "Learning Support Teacher", :email => true}
                 %h3 Staff
                 .row-fluid
                     .span12
                         %ul.thumbnails
-                            = render :partial => "person", :locals => {:name => "Angela Shepherd", :role => "Social Worker", :email => true}
                             = render :partial => "person", :locals => {:name => "Adi Perez", :role => "Office Administration", :email => true}
                             = render :partial => "person", :locals => {:name => "Kelly Mulvehill", :role => "External Relations / Mindfulness and Yoga", :email => true}
+                            = render :partial => "person", :locals => {:name => "Jermain Davis", :role => "Director of Enrollment", :email => true}
+                            = render :partial => "person", :locals => {:name => "Gaynell Davis", :role => "Behavior Support", :email => true}
