Update apply to teach page

--- a/app/views/contact/apply_to_teach.haml
+++ b/app/views/contact/apply_to_teach.haml
@@ -9,10 +9,10 @@
                 %p.lead Thank you for your interest in becoming a teacher at Prodeo Academy!
                 %p We are currently hiring for the following roles:
                 %ul
-                    %li 1 Fitness Teacher
-                    %li 1 Specialist Teacher (Art, Music, or Dance)
-                    %li 1 Recess Attendant, Tutor, and Reading Corps
-                    %li 16 Classroom Teachers (Kindergarten – 3rd Grade)
+                    %li K – 3 Classroom Teacher
+                    %li Special Education Teacher
+                    %li Social Worker
+                    %li Educational Assistant
                 %br
 
                 %p If you are interested in applying, please fill out our application.
@@ -25,10 +25,10 @@
                         (PDF)
                 %br
 
-                %p Please direct questions and completed applications to Jermain Davis.
+                %p Please direct questions and completed applications to Rachel Hemsey.
                 %p
-                    %b Jermain Davis
-                %p
-                    %a{:href => "mailto:jermaindavis@prodeoacademy.org"} jermaindavis@prodeoacademy.org
-                %p
-                    %a{:href => "tel:6518155843"} (651) 815-5843
+                    %b Rachel Hemsey
+                    %br
+                    %a{:href => "mailto:rachelhemsey@prodeoacademy.org"} rachelhemsey@prodeoacademy.org
+                    %br
+                    %a{:href => "tel:7632059950"} (763) 205-9950
