Add job descriptions

--- a/app/views/contact/apply_to_teach.haml
+++ b/app/views/contact/apply_to_teach.haml
@@ -9,10 +9,14 @@
                 %p.lead Thank you for your interest in becoming a teacher at Prodeo Academy!
                 %p We are currently hiring for the following roles:
                 %ul
-                    %li K – 3 Classroom Teacher
-                    %li Special Education Teacher
-                    %li Social Worker
-                    %li Educational Assistant
+                    %li
+                        %a{:href => asset_path("jobs/classroom_teacher.pdf")} K – 3 Classroom Teacher
+                    %li
+                        %a{:href => asset_path("jobs/special_education_teacher.pdf")} Special Education Teacher
+                    %li
+                        %a{:href => asset_path("jobs/social_worker.pdf")} Social Worker
+                    %li
+                        %a{:href => asset_path("jobs/educational_assistant.pdf")} Educational Assistant
                 %br
 
                 %p If you are interested in applying, please fill out our application.
