--- a/app/views/contact/apply_to_teach.haml
+++ b/app/views/contact/apply_to_teach.haml
@@ -10,13 +10,13 @@
                 %p We are currently hiring for the following roles:
                 %ul
                     %li
-                        %a{:href => asset_path("jobs/classroom_teacher.pdf")} K – 3 Classroom Teacher
+                        %a{:href => asset_path("jobs/classroom_teacher.pdf"), :target => :blank} K – 3 Classroom Teacher
                     %li
-                        %a{:href => asset_path("jobs/special_education_teacher.pdf")} Special Education Teacher
+                        %a{:href => asset_path("jobs/special_education_teacher.pdf"), :target => :blank} Special Education Teacher
                     %li
-                        %a{:href => asset_path("jobs/social_worker.pdf")} Social Worker
+                        %a{:href => asset_path("jobs/social_worker.pdf"), :target => :blank} Social Worker
                     %li
-                        %a{:href => asset_path("jobs/educational_assistant.pdf")} Educational Assistant
+                        %a{:href => asset_path("jobs/educational_assistant.pdf"), :target => :blank} Educational Assistant
                 %br
 
                 %p If you are interested in applying, please fill out our application.
