Show files as grid

--- a/app/views/about/board.haml
+++ b/app/views/about/board.haml
@@ -44,7 +44,7 @@
                         %p
                             The upcoming agenda, all board minutes, most recent audited financial statements, and our Authorizer's Annual Report can be viewed on
                             = succeed '.' do
-                                %a{:href => "https://drive.google.com/folderview?id=0B9F_q1nOg-J-ZDdzQVF3WWRRQU0&usp=sharing#list", :target => "_blank"} Google Drive
+                                %a{:href => "https://drive.google.com/folderview?id=0B9F_q1nOg-J-ZDdzQVF3WWRRQU0&usp=sharing#grid", :target => "_blank"} Google Drive
                 .row-fluid
                     .span12
                         %hr
