--- a/app/views/contact/apply_to_tutor.haml
+++ b/app/views/contact/apply_to_tutor.haml
@@ -8,60 +8,45 @@
                 %h2 Apply to Tutor
                 %p.lead Thank you for your interest in becoming a tutor at Prodeo Academy!
 
-                %p Our scholars have grown an average of 1.5 years in both Reading and Math each year, in part because of help from our tutors.
+                %p At Prodeo Academy, tutors help our scholars change the trajectory of their lives. Our scholars begin each school year significantly below the national average in reading and math, but perform at or above the average by the year’s end.
 
-                %h4 Who
-                %ul
-                    %li People interested in helping children change their lives
-                    %li People who need volunteer hours and want to have an impact
-                    %li People who are interested in making a contribution to society
+                %p Tutors join us in providing compassionate, individualized, and results-driven instruction to each of our scholars, reflecting an understanding of and commitment to their unique educational and personal needs.  Our scholars have made remarkable yearly gains since our school’s 2013 opening, averaging 1.5 grade levels of growth each year.
 
-                %h4 What
-                %ul
-                    %li Tutor Kindergarten, First, and Second Grade Scholars in Math and Reading
+                %h4 How You Can Help
+                %p Every Monday through Thursday we need 15 volunteers for two-hour (8:35am - 10:35am) tutoring spots. Commitments range from every day, to once per week, to once per month when part of an organization’s tutoring team.  Tutors/tutor teams work with the same group of students each week to develop meaningful and productive relationships.
 
-                %h4 Where
-                %ul
-                    %li
-                        Prodeo Academy
-                        %br
-                        1555 40th Ave NE
-                        %br
-                        Minneapolis 55421
+                %h4 Mastering Skills
+                %p Tutors at Prodeo Academy help kindergarten through second grade students master fundamental reading, writing, and math skills.
 
-                %h4 When
-                %ul
-                    %li 8:45 a.m. – 10:45 a.m. Monday through Thursday
-                    %li Cover a tutoring session one day per week or “job-share” a tutoring slot with friends, coworkers, and/or family and come once or twice each month
+                %h4 Support
+                %p All tutors receive explicit instructions, resources, and strategies for working with our scholars and subject matter.
 
-                %p All tutors receive orientation and training, as well as ongoing support. For more information please contact Chancey Anderson, Principal.
+                %p Prodeo Academy also offers an instructional packet for corporations and organizations interested in coordinating and managing tutoring teams.
+
+                %h4 Partners
+                %p Our tutors consist of college students, grad school students, corporate teams, law firm teams, retirees, and other professionals. Many tutors from these and other organizations enjoy working as individuals and in teams to help our scholars succeed:
+                .row-fluid
+                    .span4
+                        %ul
+                            %li Target
+                            %li Medtronic
+                            %li Stinson Leonard Street
+                            %li Bassford Remele
+                    .span4
+                        %ul
+                            %li Ryan Companies
+                            %li PwC
+                            %li Ulteig
+                            %li University of St. Thomas
+                    .span4
+                        %ul
+                            %li University of Minnesota
+                            %li St. Catherine University
+                            %li Bethel University
+
+                %h4 Contact
+                %p Please contact Prodeo Academy with questions or to sign up for tutoring:
                 %p
-                    %b Chancey Anderson, Principal
+                    %b Anita Kimaiga
                 %p
-                    %a{:href => "mailto:chanceyanderson@prodeoacademy.org"} chanceyanderson@prodeoacademy.org
-                %p
-                    %a{:href => "tel:3479825061"} (347) 982-5061
-
-                %h4 Our Tutors
-
-                %p Tutors from the following organizations currently volunteer as individuals or in teams at Prodeo Academy:
-                %ul
-                    %li Apex Systems
-                    %li Bassford Remele
-                    %li First Lutheran Church
-                    %li General Mills
-                    %li Junior League
-                    %li M. A. Mortenson Company
-                    %li Medtronic
-                    %li Page Scholars
-                    %li Piper Jaffray
-                    %li PriceWaterhouse Cooper
-                    %li Prodeo Academy Parents
-                    %li Ryan Companies
-                    %li St Joseph’s Parish Community of New Hope
-                    %li Stinson Leonard Street
-                    %li Thrivent Financial
-                    %li Ulteig
-                    %li University of Minnesota Interns
-                    %li University of St. Thomas Interns
-                    %li University of St. Thomas Men's Basketball
+                    %a{:href => "mailto:anitakimaiga@prodeoacademy.org"} anitakimaiga@prodeoacademy.org
