--- a/app/views/about/staff.haml
+++ b/app/views/about/staff.haml
@@ -101,7 +101,7 @@
                 .row-fluid
                     .span12
                         %ul.thumbnails
-                            = render :partial => "person", :locals => {:name => "Jeff Stensrud", :role => "Fitness Teacher", :email => true}
+                            = render :partial => "person", :locals => {:name => "Jeff Stensrud", :role => "Behavioral Specialist", :email => true}
 
                 %h3 Learning Support
                 .row-fluid
@@ -122,7 +122,7 @@
                         %ul.thumbnails
                             = render :partial => "person", :locals => {:name => "Adi Perez", :role => "Office Manager", :email => true}
                             = render :partial => "person", :locals => {:name => "Ahmisa Cuadros", :role => "Administrative Assistant", :email => true}
-                            = render :partial => "person", :locals => {:name => "Kelly Mulvehill", :role => "Mindfulness / External Relations", :email => true}
+                            = render :partial => "person", :locals => {:name => "Kelly Mulvehill", :role => "Mindfulness and Yoga Teacher / External Relations", :email => true}
                             = render :partial => "person", :locals => {:name => "Anita Kimaiga", :role => "Tutoring Coordinator/New Alliance Fellow", :email => true}
                         %ul.thumbnails
                             = render :partial => "person", :locals => {:name => "Carla Esquibel", :role => "HHM Coordinator", :email => true}
