--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,12 +17,12 @@
             <div id='top'></div>
             <div class='container' id='header'>
                 <div class='row'>
-                    <div class='span4'>
+                    <div class='span3'>
                         <a href='/' id='logo'>
                             <img src='/assets/logo.png'>
                         </a>
                     </div>
-                    <div class='span8'>
+                    <div class='span9'>
                         <div class='row'>
                             <div class='well well-small pull-right' id='social'>
                                 <div class='pull-left' id='facebook'>
@@ -94,20 +94,23 @@
                                     <li><a href="/results/">Our Results</a></li>
                                 </ul>
                             </li>
-                            <li class='dropdown-submenu pull-right'>
+                            <li class='dropdown-submenu'>
                                 <a class='dropdown-toggle' data-toggle='dropdown' href='#'>
-                                    Contact Us
+                                    Get Involved
                                     <span class='caret'></span>
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="/contact/apply_to_teach">Apply to Teach</a></li>
+                                    <li><a href="/get_involved/apply_to_teach">Apply to Teach</a></li>
                                     <li class='divider'></li>
-                                    <li><a href="/contact/apply_to_tutor">Apply to Tutor</a></li>
+                                    <li><a href="/get_involved/apply_to_tutor">Apply to Tutor</a></li>
                                     <li class='divider'></li>
-                                    <li><a href="/contact/volunteer">Volunteer</a></li>
-                                    <li class='divider'></li>
-                                    <li><a href="/contact/">Get in Touch</a></li>
+                                    <li><a href="/get_involved/volunteer">Volunteer</a></li>
                                 </ul>
+                            </li>
+                            <li class='dropdown-submenu'>
+                                <a href='/contact'>
+                                    Contact Us
+                                </a>
                             </li>
                         </ul>
                     </div>
