--- a/assets/main.css
+++ b/assets/main.css
@@ -42,7 +42,7 @@ html, body {
     box-shadow: 0 6px 6px -3px rgba(0, 0, 0, 0.3);
     z-index: -1;
     position: absolute;
-    height: 190px;
+    height: 160px;
     width: 100%;
 }
 
@@ -69,7 +69,7 @@ html, body {
 }
 
 #nav {
-    margin-top: 55px;
+    margin-top: 25px;
     font-size: 15px;
     z-index: 1000;
     margin-bottom: 0px;
@@ -246,8 +246,14 @@ footer a:hover {
     border-top: 3px solid rgb(159, 20, 22);
 }
 
-.lead {
+.lead,
+.lead2 {
     margin-bottom: 10px;
+}
+
+.lead2 {
+    font-size: 18px;
+    line-height: 26px;
 }
 
 li.lead {
@@ -355,10 +361,15 @@ ul, ol {
     text-align: left;
 }
 
-#index .hero-unit .btn {
+#index .hero-unit .btn,
+.carousel .btn {
     color: #922628;
     font-size: 22px;
     font-weight: bold;
+}
+
+#donate .modal-body {
+    max-height: 520px;
 }
 
 /* *
@@ -378,6 +389,14 @@ ul, ol {
 }
 
 /* *
+   * COMMUNITY MEETINGS
+   *
+   */
+.spirit-stick .thumbnail {
+    padding-top: 4px;
+}
+
+/* *
    * VALUES
    *
    */
@@ -386,11 +405,15 @@ ul, ol {
     margin: 25px 0;
 }
 
-img.youtube {
+#youtube-link img {
     min-width: 0;
     min-height: 0;
-    width: 125px;
+    width: 200px;
     position: absolute;
     right: 15px;
     bottom: 15px;
+}
+
+#youtube-link .tooltip .tooltip-inner {
+    font-size: 1.2em;
 }
