Update work at prodeo, fix video

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,7 +100,7 @@
                                     <span class='caret'></span>
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="/get_involved/apply_to_teach">Apply to Teach</a></li>
+                                    <li><a href="/get_involved/work_at_prodeo">Work at Prodeo</a></li>
                                     <li class='divider'></li>
                                     <li><a href="/get_involved/apply_to_tutor">Apply to Tutor</a></li>
                                     <li class='divider'></li>
