--- a/assets/main.css
+++ b/assets/main.css
@@ -368,6 +368,11 @@ ul, ol {
     font-weight: bold;
 }
 
+.carousel .btn {
+    font-size: 2.1em;
+    padding: 15px 12px;
+}
+
 #donate .modal-body {
     max-height: 520px;
 }
