--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,17 @@
     </head>
     <body>
         <div id='wrap'>
+            <div id='promo'>
+                <div class='container'>
+                    <div clas='row'>
+                        <div class='span12'>
+                            <p>
+                                <a href='https://events.r20.constantcontact.com/register/eventReg?oeidk=a07edx13rm346f22019&oseq=&c=&ch=' target='blank'>Register for Prodeo Academy's Benefit Dinner on May 4th!</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div id='top'></div>
             <div class='container' id='header'>
                 <div class='row'>
