--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,12 @@
             {{ site.title }}{% if page.title %} - {{ page.title }}{% endif %}
         </title>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link href="/assets/main.css" rel="stylesheet" type="text/css">
+        <link href="/assets/main.css?{{site.time | date: '%s'}}" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ujs/1.2.2/rails.js" type="text/javascript"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="/assets/main.js" type="text/javascript"></script>
+        <script src="/assets/main.js?{{site.time | date: '%s'}}" type="text/javascript"></script>
     </head>
     <body>
         <div id='wrap'>
